# blackpill

./: .gitignore  .gitmodules  Cargo.toml  Kbuild  Makefile  README.md  build_image.sh  rust-toolchain.toml  start_vm.sh  testvm.sh
assets/: blackpill-rootkit-overview.drawio  blackpill-sequence-diagram.drawio
blackpill/: Cargo.toml
blackpill-c2/: client.py  pyproject.toml  test_server.py
patches/: busybox-ncurses-fix.patch  qemu-busybox-min.patch
scripts/: build_image.sh  start_vm.sh
src/: blackpill.rs  lib.rs  test.rs
src/hiding/: mod.rs
src/hooking/: idt.rs  mod.rs
src/hooking/syscall/: _template.rs  mod.rs  sys_execve.rs  sys_filldir64.rs  sys_kill.rs  sys_mkdir.rs
src/hypervisor/: capabilities.c  capabilities.h  constants.rs  exit_handler.rs  exit_reason.h  guest.rs  hypercapa.c  hypervisor.c  hypervisor.h  intel.rs  macros.h  mod.rs  utils.h  vmcs.rs  vmx.rs
src/hypervisor/hardware_vt/: mod.rs  svm.rs  svm_run_vm.s  vmx.rs  vmx_run_vm.s
src/persistence/: mod.rs
src/utils/: asm.rs  bitfield.rs  misc.rs  mod.rs  x86.rs
src/xdp/: mod.rs
stealthbpf/: Cargo.toml
stealthbpf/stealthbpf/: Cargo.toml  build.rs
stealthbpf/stealthbpf-common/: Cargo.toml
stealthbpf/stealthbpf-ebpf/: Cargo.toml
stealthbpf/stealthbpf-ebpf/src/: main.rs
stealthbpf/stealthbpf/src/: main.rs
