[package]
name = "stealthbpf-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
stealthbpf-common = { path = "../stealthbpf-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.7"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "stealthbpf"
path = "src/main.rs"
